[#7] feat: get list room type API
