# docs/swagger.json
@@ -5,6 +5,30 @@
     },
     "paths": {
         "/room-types": {
+            "get": {
+                "description": "List room types",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "room-types"
+                ],
+                "summary": "List room types",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/rooms.RoomTypesResponse"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create room type",
                 "consumes": [
@@ -203,6 +227,17 @@
                 },
                 "price": {
                     "type": "number"
+                }
+            }
+        },
+        "rooms.RoomTypesResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
